# cocl-operator

./: Cargo.toml  Makefile  PROJECT  REUSE.toml
api/: cocl-gen.go
api/v1alpha1/: crds.go
compute-pcrs/: Cargo.toml  Containerfile
compute-pcrs/src/: main.rs
config/rbac/: confidentialcluster_admin_role.yaml  confidentialcluster_editor_role.yaml  confidentialcluster_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  machine_admin_role.yaml  machine_editor_role.yaml  machine_viewer_role.yaml  metrics_auth_role_binding.yaml  role_binding.yaml  service_account.yaml
crds/src/: lib.rs  mc.rs  mcp.rs
kind/: config.yaml  register-forward.yaml
lib/src/: kopium.rs  lib.rs
manifest-gen/src/: main.rs
operator/: Cargo.toml
operator/src/: conditions.rs  k8s_util.rs  lib.rs  main.rs  mock_client.rs  reference_values.rs  register_server.rs  tpm.rego  trustee.rs
register-server/: Cargo.toml  Containerfile
register-server/src/: main.rs
rv-store/: Cargo.toml
rv-store/src/: lib.rs
scripts/: clean-cluster-kind.sh
test_utils/src/: lib.rs
