[package]
name = "compute-pcrs"
version = "0.1.0"
edition.workspace = true
description = "A cocl-operator optimized compute-pcrs interface"

[dependencies]
anyhow.workspace = true
chrono = "0.4.41"
clap = { workspace = true, features = ["derive"] }
compute-pcrs-lib = { git = "https://github.com/confidential-clusters/compute-pcrs", version = "0.1.0" }
json-patch.workspace = true
jsonptr.workspace = true
k8s-openapi.workspace = true
kube = { workspace = true, features = ["runtime"] }
log.workspace = true
semver = { version = "1.0.22", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
