# SPDX-FileCopyrightText: Alice Frosi <afrosi@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "register-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clevis-pin-trustee-lib.workspace = true
crds = { path = "../crds" }
env_logger.workspace = true
ignition-config = "0.5.0"
k8s-openapi.workspace = true
kbs-types = "0.14.0"
kube.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.9.7"
uuid = { version = "1.0", features = ["v4"] }
warp = "0.3"
